feature/user-profile-enhancements (#2)
* feat: Add Cors validation if needed.

* feat: Add logout and token expiration logic. Make this suitable for production using redis.

* feat: Add logout and token expiration logic. Make this suitable for production using redis.

* feat: Fix role parse problems

* fix: resolve user avatar upload, user identity sync, CORS blocking, and role mapping issues

* test: add user unit tests, integration flow IT and embedded test infrastructure

* test: refactor IT tests to extend BaseFlowIT with real JWT auth and MongoDB cleanup

* test: add AvatarFlowIT and fix cross-IT token isolation with refreshAllSessions()

* test: migrate all IT tests to atomic pattern, replace BaseFlowIT with thin BaseIT

* docs: document atomic testing strategy in AI.md

* test: add user unit tests, integration flow IT and embedded test infrastructure

* test: add explicit bean assertions to contextLoads smoke test

* fix(backend): fix cart immutability, secure endpoints, fix NPE and add JTI to JWT

* test(backend): migrate to atomic ITs and fix assertions

* docs: update roadmap and atomic tests methodology

* fix(avatar): resolve avatar upload and retrieval flow by generating UUID and saving to DB, fix CORS and permissions

* test: update AvatarIT to expect generated UUID instead of literal filename

* docs: update AI.md with avatar upload flow details

* fix(identity): enforce email and ID immutability and add password change support

- Remove email from UpdateUserRestRequest and UpdateUserCommand
- Enforce immutability of ID and email in UpdateUserUseCase by using existing DB entity data
- Add password change support in UpdateUserUseCase using PasswordEncoderPort
- Remove unnecessary storage fallback in DownloadFileUseCase

* test(identity): update user tests to align with immutable email fields

- Add shouldNotChangeEmailEvenIfAttempted to explicitly test email immutability
- Remove invalid conflict test cases
- Update DTO mock data to match new construct